continuing design work
adjusting margins and white space

--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
       </div>
       <div class="column-left columns">
         <section id="work">
-          <h2></h2>
+          <h2>Work History</h2>
           <ul>
             <li>
-              <h3>job title</h3>
+              <h3>Job Title</h3>
               <p>description</p>
             </li>
             <li>
@@ -75,7 +75,7 @@
           </ul>
         </section>
         <section id="contact">
-          <h2></h2>
+          <h2>Contact</h2>
           <p><span>Phone:</span> 434 555 5555</p>
           <p><span>Email:</span> me@germainep.com</p>
           <p><span>Website:</span> www.germainep.com</p>
