added text for work history section

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </header>
 
     <main class="container">
-      <div class="column-right columns">
+      <div class="column-left columns">
         <section id="intro">
           <h2></h2>
           <p>
@@ -48,28 +48,33 @@
           </ul>
         </section>
       </div>
-      <div class="column-left columns">
+      <div class="column-right columns">
         <section id="work">
           <h2>Work History</h2>
           <ul>
             <li>
-              <h3>Job Title</h3>
-              <p>description</p>
+              <h3>Robot Technician</h3>
+              <p>Maintain, Repair and Programming of Miller&trade; Welding robotic equipment.</p>
             </li>
             <li>
-              <h3>Job Title</h3>
-              <p>description</p>
+              <h3>Welding Supervisor</h3>
+              <p>
+                Provides guidance and scheduling for welding operations in a fast pace fabrication
+                shop. Evaluates welding quality of team members as well as potential new hires.
+                Maintains a high standard of quality and effeciency among team to meet quality and
+                production goals.
+              </p>
             </li>
             <li>
-              <h3>Job Title</h3>
-              <p>description</p>
+              <h3>Fabrication Welder</h3>
+              <p>
+                MIG welds raw steel components in a fast paced production based enviroment, while
+                maintaining a high level of quality and effeciency. Provides feedback on quality and
+                of raw materials and feasiblity of work load.
+              </p>
             </li>
             <li>
-              <h3>Job Title</h3>
-              <p>description</p>
-            </li>
-            <li>
-              <h3>Job Title</h3>
+              <h3>Customer Service Representative</h3>
               <p>description</p>
             </li>
           </ul>
