--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </header>
 
     <main class="container">
-      <div class="column-left columns">
+      <div id="column-left">
         <section id="intro">
           <h2></h2>
           <p>
@@ -48,7 +48,7 @@
           </ul>
         </section>
       </div>
-      <div class="column-right columns">
+      <div id="column-right">
         <section id="work">
           <h2>Work History</h2>
           <ul>
