added intro text and made adjustment the padding

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         <section id="intro">
           <h2></h2>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati assumenda perferendis
-            reprehenderit iusto labore numquam sunt molestias deserunt dolore voluptatem odio rerum
-            impedit ad explicabo eligendi tempore nemo, quisquam quos.
+            I'm a software engineer specializing in HTML and CSS. I love to build interactive app
+            with animations and beautiful transitions. I bring a wealth of parallel experience from
+            a customer support, supervisory, and fabrication background.
           </p>
         </section>
         <section id="skills">
